src/test/ui/error-codes/E0007.stderr
error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/E0007.rs:14:9
   |
14 |         op_string @ Some(s) => {},
   |         ^^^^^^^^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0303]: pattern bindings are not allowed after an `@`
  --> $DIR/E0007.rs:14:26
   |
14 |         op_string @ Some(s) => {},
   |                          ^ not allowed after `@`

error: aborting due to 2 previous errors

You've got a few errors: E0007, E0303
If you want more information on an error, try using "rustc --explain E0007"
